bug:fix issues where narrowing browser causes overlap of navigation bar items

--- a/portfolio/src/main/webapp/css/nav.css
+++ b/portfolio/src/main/webapp/css/nav.css
@@ -47,6 +47,7 @@
 
 .nav-bar-items {
   display: inline-flex;
+  margin-top: 8px;
 }
 
 .nav-bar-anchors {
